--- a/back/package.json
+++ b/back/package.json
@@ -7,12 +7,17 @@
     "build": "tsc -p ."
   },
   "dependencies": {
+    "@types/es6-shim": "^0.31.45",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
