--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -1,9 +1,11 @@
 {
     "compilerOptions": {
-      "target": "ES5",
+      "target": "ES6",
       "module": "CommonJS",
       "sourceMap": true,
-      "outDir": "dist/commonjs"
+      "outDir": "dist/commonjs",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true
     },
     "exclude": [
       "dist",
