--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -1,14 +1,15 @@
 {
-    "compilerOptions": {
-      "target": "ES6",
-      "module": "CommonJS",
-      "sourceMap": true,
-      "outDir": "dist/commonjs",
+   "compilerOptions": {
+      "lib": [
+         "es5",
+         "es6"
+      ],
+      "target": "es5",
+      "module": "commonjs",
+      "moduleResolution": "node",
+      "outDir": "./build",
       "emitDecoratorMetadata": true,
-      "experimentalDecorators": true
-    },
-    "exclude": [
-      "dist",
-      "node_modules"
-    ]
+      "experimentalDecorators": true,
+      "sourceMap": true
+   }
 }
