--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "weather-app",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=18.19.1"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
