--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-app",
   "version": "0.0.0",
   "engines": {
-    "node": ">=18.19.1"
+    "node": "^18.19.1"
   },
   "private": true,
   "scripts": {
